syntax = "proto3";

option csharp_namespace = "Protos.Shared";

package shared;

import "google/type/datetime.proto";
import "Entities/Category.proto";
import "Entities/PaymentDefinition.proto";

message RaceDetail {
  string Id = 1;
  string Name = 2;
  double Distance = 3;
  double Incline = 4;
  google.type.DateTime EnteringFrom = 5;
  google.type.DateTime EnteringTo = 6;
  double MaxNumberOfCompetitors = 7;
  google.type.DateTime Begin = 8;

  repeated shared.Category Categories = 9;
  repeated shared.PaymentDefinition Payments = 10;
}